--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Jérôme Desboeufs <jerome.desboeufs@data.gouv.fr>",
   "license": "MIT",
   "bin": {
-    "fantoir2csv": "./bin/cli.js"
+    "fantoir2csv": "./bin/fantoir2csv.js"
   },
   "scripts": {
     "prepare": "node scripts/prepare",
