--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   },
   "scripts": {
     "prepare": "node scripts/prepare",
-    "lint": "xo"
+    "lint": "xo",
+    "test": "ava"
   },
   "dependencies": {
     "csv-write-stream": "^2.0.0",
+    "fuzzyset.js": "^0.0.4",
+    "gunzip-stream": "^1.0.0",
     "lodash": "^4.17.4",
     "mississippi": "^1.3.0",
     "split2": "^2.2.0"
   },
   "devDependencies": {
-    "csv-parser": "^1.11.0",
+    "ava": "^0.24.0",
+    "csv-parser": "^1.12.0",
+    "get-stream": "^3.0.0",
+    "into-stream": "^3.1.0",
     "xo": "^0.18.2"
   },
   "xo": {
