--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   ],
   "scripts": {
     "prepare": "node scripts/prepare",
+    "experiment": "bin/fantoir-experiment.js",
     "lint": "xo",
     "test": "ava"
   },
   "dependencies": {
+    "@etalab/cog": "^0.1.0",
+    "chalk": "^2.4.1",
     "csv-write-stream": "^2.0.0",
     "fuzzyset.js": "^0.0.4",
     "gunzip-stream": "^1.0.0",
