--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
   "repository": "git@github.com:etalab/fantoir.git",
   "author": "Jérôme Desboeufs <jerome.desboeufs@data.gouv.fr>",
   "license": "MIT",
-  "bin": {
-    "fantoir-split": "./bin/fantoir-split.js"
-  },
   "files": [
     "bin",
     "data/natures_voies.json",
@@ -19,6 +16,7 @@
     "index.js"
   ],
   "scripts": {
+    "prepare:data": "node bin/prepare-data",
     "prepare:natures-voies": "node bin/prepare-natures-voies",
     "experiment": "bin/fantoir-experiment.js",
     "lint": "xo",
@@ -26,19 +24,20 @@
   },
   "dependencies": {
     "@etalab/cog": "^0.1.0",
+    "@keyv/sqlite": "^2.0.0",
     "chalk": "^2.4.1",
     "csv-write-stream": "^2.0.0",
     "fuzzyset.js": "^0.0.4",
     "gunzip-stream": "^1.0.0",
+    "keyv": "^3.1.0",
     "lodash": "^4.17.4",
-    "minimist": "^1.2.0",
     "mississippi": "^1.3.0",
-    "split2": "^2.2.0"
+    "split2": "^3.0.0"
   },
   "devDependencies": {
     "ava": "^0.24.0",
     "csv-parser": "^1.12.0",
-    "get-stream": "^3.0.0",
+    "get-stream": "^4.1.0",
     "into-stream": "^3.1.0",
     "xo": "^0.18.2"
   },
