Switch to @etalab/decoupage-administratif

--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "test": "ava"
   },
   "dependencies": {
+    "@etalab/decoupage-administratif": "^0.5.0",
     "@keyv/sqlite": "^2.0.0",
     "fuzzyset.js": "^0.0.8",
     "keyv": "^3.1.0",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "@etalab/cog": "^0.1.0",
     "@etalab/fantoir-parser": "^0.4.0",
     "ava": "^1.4.1",
     "chalk": "^2.4.2",
