--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@etalab/decoupage-administratif": "^0.5.0",
     "@keyv/sqlite": "^2.0.0",
+    "bluebird": "^3.5.4",
     "fuzzyset.js": "^0.0.8",
     "keyv": "^3.1.0",
     "lodash": "^4.17.11"
@@ -29,8 +30,8 @@
     "@etalab/fantoir-parser": "^0.4.0",
     "ava": "^1.4.1",
     "chalk": "^2.4.2",
-    "csv-write-stream": "^2.0.0",
     "debug": "^4.1.1",
+    "fs-extra": "^7.0.1",
     "gunzip-stream": "^1.0.1",
     "pumpify": "^1.5.1",
     "through2": "^3.0.1",
