--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   ],
   "scripts": {
     "build": "node --max_old_space_size=8192 build",
-    "lint": "xo",
-    "test": "ava"
+    "lint": "xo"
   },
   "dependencies": {
     "@etalab/decoupage-administratif": "^0.5.0",
@@ -27,7 +26,6 @@
   },
   "devDependencies": {
     "@etalab/fantoir-parser": "^0.4.0",
-    "ava": "^1.4.1",
     "bluebird": "^3.5.4",
     "chalk": "^2.4.2",
     "debug": "^4.1.1",
