--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "lint": "xo"
   },
   "dependencies": {
+    "@etalab/adresses-util": "^0.4.0",
     "@keyv/sqlite": "^2.0.0",
     "keyv": "^3.1.0",
+    "leven": "^3.1.0",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
