Use forked keyv (Node 14+ support)

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "dependencies": {
     "@etalab/adresses-util": "^0.8.2",
-    "@keyv/sqlite": "^2.0.2",
-    "keyv": "^4.0.3",
+    "@livingdata/keyv": "^4.1.0",
+    "@livingdata/keyv-sqlite": "^2.1.0",
     "leven": "^3.1.0",
     "lodash": "^4.17.21"
   },
