--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "lint": "xo"
   },
   "dependencies": {
-    "@etalab/adresses-util": "^0.8.2",
-    "@keyv/sqlite": "^3.5.1",
-    "keyv": "^4.2.8",
+    "@ban-team/adresses-util": "^0.9.0",
+    "@keyv/sqlite": "^3.6.5",
+    "keyv": "^4.5.2",
     "leven": "^3.1.0",
     "lodash": "^4.17.21"
   },
